examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error, 1 note • examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx
// error[E300]: Parameter Type Mismatch
//
// Parameter 1 has the wrong type.
//
//   examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx:45:5
//    |
// 45 |     run_needs_console_clock(only_console)
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//    |     ------------------------------------- parameter 1 has type `() -> Unit with Console`
//
//    |     ------------------------------------- this type mismatch is reported here
//
// Note:
//   expected parameter type: () -> Unit with Console, Clock
//   found parameter type: () -> Unit with Console
//   the conflicting types meet at this expression
//
// Help:
//   Change parameter 1 to use `() -> Unit with Console, Clock` consistently.
//
//
// Note: Downstream Errors Suppressed
//
// I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E422: callback effect row is missing required effects.

fn run_needs_console_clock(f: (() -> Int with Console, Clock)) -> Int with Console, Clock {
    f()
}

fn only_console() -> Int with Console {
    print("console")
    1
}

fn main() with Console, Clock {
    run_needs_console_clock(only_console)
    None
}
